# NandaWM

./: Makefile  README.md  meson.build  nandawm
.claude/: settings.local.json
src/: input.c  layer.c  main.c  nanda.h  output.c  view.c
